Trabajando en el Header y el Footer

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
+</head>
+
+
+<!-- HEADER-->
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand">
+      <img src="/assets/logo_rosa.png" class="d-inline-block align-top" alt="">
+    </a>
+</nav>
