header, formulario y footer

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,79 +1,56 @@
 <!-- Footer -->
 <footer class="page-footer font-small teal pt-4">
 
-    <!-- Footer Text -->
     <div class="container-fluid text-center text-md-left">
   
-      <!-- Grid row -->
+      <!-- FILA DE LOS 2 BLOQUES DE CONTENIDO-->
       <div class="row">
   
-        <!-- Grid column -->
+        <!-- COLUMNA IZQUIERDA -->
         <div class="col-md-6 mt-md-0 mt-3">
-  
-          <!-- Content -->
           <h5 class="text-uppercase font-weight-bold">Adopta Una Mascota</h5>
-          <p>texto</p>
+          <p>Entidad fundada por Belinda Cuesta, Fran García,
+            Antonio Guijarro, Paula Muerte y Raquel Álvarez
+          </p>
   
         </div>
-        <!-- Grid column -->
   
-        <hr class="clearfix w-100 d-md-none pb-3">
-  
-        <!-- Grid column -->
+        <!-- COLUMNA DERECHA -->
         <div class="col-md-6 mb-md-0 mb-3">
-  
-          <!-- Content -->
-          <h5 class="text-uppercase font-weight-bold">Adopta Una Mascota </h5>
-          <p>Texto dos</p>
+          <h5 class="text-uppercase font-weight-bold">Cuidado y responsabilidad social</h5>
+          <p>Por un desarrollo sostenible y un cuidado responsable ¡Únete al club!</p>
   
         </div>
-        <!-- Grid column -->
-  
       </div>
-      <!-- Grid row -->
-  
     </div>
-    <!-- Footer Text -->
     
-    <!-- Grid row-->
+    <!-- FILA DE ICONOS-->
     <div class="row">
-
-        <!-- Grid column -->
         <div class="col-md-12 py-5 icons">
-  
-            <!-- Facebook -->
             <a class="fb-ic">
                 <i class="fa fa-facebook fa-2x"></i>
             </a>
-            <!-- Twitter -->
             <a class="tw-ic">
                 <i class="fa fa-twitter fa-2x"></i>
             </a>
-            <!--Linkedin -->
             <a class="li-ic">
                 <i class="fa fa-linkedin fa-2x"></i>
             </a>
-            <!--Instagram-->
             <a class="ins-ic">
                 <i class="fa fa-instagram fa-2x"></i>
             </a>
-            <!--Pinterest-->
             <a class="pin-ic">
               <i class="fa fa-pinterest fa-2x"> </i>
             </a>
         </div>
-        <!-- Grid column -->
-
-  
     </div>
-    <!-- Footer Elements -->
   
   
-    <!-- Copyright -->
+    <!-- FILA DEL COPYRIGHT-->
     <div class="footer-copyright text-center py-3">© 2023 Copyright:
       <a> TeamOne</a>
     </div>
-    <!-- Copyright -->
+
   
   </footer>
   <!-- Footer -->
