--- a/src/app/Pages/landing-page/landing-page.component.html
+++ b/src/app/Pages/landing-page/landing-page.component.html
@@ -1,1 +1,13 @@
-<p>landing-page works!</p>
+
+<app-header>
+    <!--INCLUIMOS EL HEADER-->
+</app-header>
+
+
+<app-contact-form>
+    <!--INCLUIMOS EL FORMULARIO DE CONTACTO-->
+</app-contact-form>
+
+<app-footer>
+    <!--INCLUIMOS EL FOOTER-->
+</app-footer>
