mejorando campos del formulario

--- a/src/app/Components/header/header.component.css
+++ b/src/app/Components/header/header.component.css
@@ -4,7 +4,7 @@
 
 .navbar {
     height: 150px;
-    background-color: #EED2E6 !important;
+    background-color: #8FA5D5 !important;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
 } 
