--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -9,6 +9,6 @@
 <!-- HEADER-->
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand">
-      <img src="/assets/logo_rosa.png" class="d-inline-block align-top" alt="">
+      <img src="/assets/logo_azul.png" class="d-inline-block align-top" alt="">
     </a>
 </nav>
