--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -12,21 +12,21 @@
           <p>Entidad fundada por Belinda Cuesta, Fran García,
             Antonio Guijarro, Paula Muerte y Raquel Álvarez
           </p>
-  
         </div>
   
         <!-- COLUMNA DERECHA -->
         <div class="col-md-6 mb-md-0 mb-3">
           <h5 class="text-uppercase font-weight-bold">Cuidado y responsabilidad social</h5>
           <p>Por un desarrollo sostenible y un cuidado responsable ¡Únete al club!</p>
-  
         </div>
       </div>
     </div>
     
+
+    <div class="container-fluid">
     <!-- FILA DE ICONOS-->
     <div class="row">
-        <div class="col-md-12 py-5 icons">
+        <div class="col-md-6 py-5 icons">
             <a class="fb-ic">
                 <i class="fa fa-facebook fa-2x"></i>
             </a>
@@ -43,8 +43,13 @@
               <i class="fa fa-pinterest fa-2x"> </i>
             </a>
         </div>
+
+
+      <div class="col-md-5 logo">
+        <img src="/assets/logo_rosa.png">
+      </div>  
     </div>
-  
+  </div>
   
     <!-- FILA DEL COPYRIGHT-->
     <div class="footer-copyright text-center py-3">© 2023 Copyright:
