--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -27,19 +27,19 @@
     <!-- FILA DE ICONOS-->
     <div class="row">
         <div class="col-md-6 py-5 icons">
-            <a class="fb-ic">
+            <a class="fb-ic" href="https://es-es.facebook.com/" target="_blank">
                 <i class="fa fa-facebook fa-2x"></i>
             </a>
-            <a class="tw-ic">
+            <a class="tw-ic" href="https://twitter.com/?lang=es" target="_blank">
                 <i class="fa fa-twitter fa-2x"></i>
             </a>
-            <a class="li-ic">
+            <a class="li-ic" href="https://es.linkedin.com/" target="_blank">
                 <i class="fa fa-linkedin fa-2x"></i>
             </a>
-            <a class="ins-ic">
+            <a class="ins-ic" href="https://www.instagram.com/" target="_blank">
                 <i class="fa fa-instagram fa-2x"></i>
             </a>
-            <a class="pin-ic">
+            <a class="pin-ic" href="https://www.pinterest.es/" target="_blank">
               <i class="fa fa-pinterest fa-2x"> </i>
             </a>
         </div>
