modificado titulo del formulario

--- a/src/app/Pages/contact-form/contact-form.component.html
+++ b/src/app/Pages/contact-form/contact-form.component.html
@@ -7,7 +7,7 @@
 
 
 <body>
-    <h1 class="text-center">Formulario de contacto</h1>
+    <h1 class="text-center">Formulario de adopción</h1>
   <div class="container justify-content-center">
   
     <div id="flotante">
@@ -157,7 +157,7 @@
       </div>
     
       <div class="form-group bloque">
-          <label for="comentarios">Comentarios</label>
+          <label for="comentarios">Mensaje</label>
           <textarea class="form-control" name="comentarios" #comentarios [(ngModel)]="ContactModel.comentarios" id="textArea" rows="3"></textarea>
       </div>
   
