--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- AÑADIR HEADER -->
-
+<app-header></app-header>
 
 <div class="row introduccion">
     <div class="col-md-5" style="margin-top: 15%; text-align: right;">
@@ -121,7 +121,9 @@
     <br>
     <p>Si eres una protectora con animales para visibilizar o un particular con una mascota de la que ya no te puedes
         encargar, ponte en contacto con nosotros y te ayudaremos a encontrarle un nuevo hogar</p>
-    <!-- FORMULARIO -->
+    <br>
+    <br>
+    <app-contact-form></app-contact-form>
 </div>
 
-<!-- AÑADIR FOOTER -->
+<app-footer></app-footer>
