haciendo la navegacion del navBar con las páginas y poniendo cada componente en una pestaña de la navegacion

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -16,20 +16,20 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" routerLink="home">Home</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" routerLink="aboutUs" >Quienes somos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Quienes somos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contacta con nosotros</a>
+        <a class="nav-link" routerLink="contactUs">Contacta con nosotros</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" >Blog</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" id="adopcion" href="#">Dar en adopción</a>
+        <a class="nav-link" id="adopcion" routerLink="formularioAdopcion" >Dar en adopción</a>
       </li>
     </ul>
   </div>
