--- a/src/app/Pages/ContactUs/contact-us.component.css
+++ b/src/app/Pages/ContactUs/contact-us.component.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     justify-content: center !important;
     justify-items: center !important;
