--- a/src/app/Pages/about-us/about-us.component.html
+++ b/src/app/Pages/about-us/about-us.component.html
@@ -5,8 +5,8 @@
 <div id="logo">
 <img src="./assets/logo-png.png" class="img-fluid">
 </div>
-<!--CARDS EQUIPO-->
 
+<!--CARDS EQUIPO-->
 <div class="container">
 
 <div class="row uno">
@@ -84,7 +84,7 @@
 <h4>¿Cómo puedes colaborar?</h4>
 <div id="filaTres">
     <img src="./assets/images/LOVEANIMAL.jpg" id="imagenTres" class="rounded float-left">
-<p> Descargándote nuestra aplicación Adopta Una Mascota y compartiendola por redes sociales.<br>
+<p> Descargándote nuestra aplicación <strong>Adopta Una Mascota</strong> y compartiendola por redes sociales.<br>
     Si conoces a alguien que quiera adoptar una mascota ¡háblale de nosotros! <br>
     Si ya no puedes cuidar de tu mascota, contacta con nosotros ¡te ayudaremos encantados! <br>
     Y sobretodo siendo responsable a la hora de decidir que quieres una mascota como compañero y miembro de la familia.</p>
