--- a/src/app/Pages/contact-form/contact-form.component.html
+++ b/src/app/Pages/contact-form/contact-form.component.html
@@ -4,6 +4,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
+
+<div class="row form-adopcion">
+  <h1>Formulario de adopción</h1>
+  <br>
+  <br>
+  <br>
+  <p>Si eres una protectora con animales para visibilizar o un particular con una mascota de la que ya no te puedes
+      encargar, ponte en contacto con nosotros y te ayudaremos a encontrarle un nuevo hogar</p>
+  <br>
+  <br>
+
+</div>
   
     <div id="flotante">
     <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" class="justify-content-center" id="formulario"> <!--creamos nuestra variable template-->
