--- a/src/app/Pages/landing-page/landing-page.component.html
+++ b/src/app/Pages/landing-page/landing-page.component.html
@@ -3,10 +3,9 @@
     <!--INCLUIMOS EL HEADER-->
 </app-header>
 
-
-<app-contact-form>
-    <!--INCLUIMOS EL FORMULARIO DE CONTACTO-->
-</app-contact-form>
+<router-outlet>
+    <!--INCLUIMOS EL ENRUTAMIENTO-->
+</router-outlet>
 
 <app-footer>
     <!--INCLUIMOS EL FOOTER-->
