--- a/src/app/Pages/contact-form/contact-form.component.css
+++ b/src/app/Pages/contact-form/contact-form.component.css
@@ -10,15 +10,23 @@ body {
 }
 
 h1 {
+    text-align: center;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: 5rem;
     padding: 20px;
     margin-top: 50px;
     color: #292C35;
-    font-weight: bold;
-    text-shadow: 5px 5px 4px white;
+    text-shadow: 5px 5px 4px #8FA5D5;
     margin-top: 160px;
+}
+
+p {
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2rem;
+    padding: 20px;
+    color: #292C35;
 }
 
 form {
