Pop-up cookies terminado

--- a/src/app/Components/cookies/cookies.component.html
+++ b/src/app/Components/cookies/cookies.component.html
@@ -1,14 +1,14 @@
-<body>
-    <div class="wrapper">
-      <img src="/assets/images/cookie.png" alt="Icono de cookie">
-      <div class="content">
-        <h2>Aviso de cookies</h2>
-        <p>Esta web usa cookies para asegurarse de que tienes la mejor experiencia</p>
-        <div class="buttons">
-          <button class="item" (click)="accept()" >Acepto</button>
-          <a href="/landingPage/politica-privacidad" class="item" >Leer más</a>
-        </div>
+<div class="background-cookies">
+  <div class="wrapper">
+    <img src="/assets/images/cookie.png" alt="Icono de cookie">
+    <div class="content">
+      <h2>Aviso de cookies</h2>
+      <p>Esta web usa cookies para asegurarse de que tienes la mejor experiencia</p>
+      <div class="buttons">
+        <button class="item" (click)="accept()" >Acepto</button>
+        <a href="#" class="item" >Leer más</a>
       </div>
-    </div> 
-  </body>
-
+    </div>
+  </div> 
+</div>
+    
