--- a/src/app/Components/cookies/cookies.component.css
+++ b/src/app/Components/cookies/cookies.component.css
@@ -5,11 +5,31 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body{
-  background: #FCBA7F;
+
+.appear {
+  opacity: 1 !important;
+  transition: opacity 0.5s ease-in-out;
 }
+
+.background-cookies {
+  display: block;
+  background-color: rgba(0, 0, 0, 0.20);
+  position: fixed;
+  z-index: 99;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.background-cookies.hide {
+  opacity: 0;
+}
+
 .wrapper{
-  position: absolute;
+  display: block;
+  position: fixed;
+  width: calc(100% - 40px);
   bottom: 30px;
   left: 30px;
   max-width: 365px;
@@ -18,6 +38,7 @@ body{
   border-radius: 15px;
   box-shadow: 1px 7px 14px -5px rgba(0,0,0,0.15);
   text-align: center;
+  opacity: 0;
 }
   
 .wrapper.hide{
