--- a/src/app/Components/footer/footer.component.css
+++ b/src/app/Components/footer/footer.component.css
@@ -2,59 +2,31 @@
     box-sizing: border-box;
 }
 
-footer {
-    margin-top: 20px;
-    margin-bottom: 0px;
+.custom-footer {
+    color: var(--bs-body-color);
+    background-color: #f7e7f2;
 }
 
-.icons {
-    text-align: center;
-    margin: 0px;
-}
-
-.logo {
-    text-align: center;
-}
-
-
-.fa {
-    padding: 15px;
-    color: #292C35;
-}
-
-img {
-    height: 150px;
-    margin: 0px;
-}
-
-h5{
-    padding-top: 15px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-}
-
-p {
-    padding-bottom: 0px;
-    padding-top: 0px;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin: 0px;
-}
-
-.footer-copyright {
+.custom-copyright {
     background-color: #D18DBC;
 }
 
-.row {
-    background-color: #eed2e684;
+.contendor-imagen {
+    width: 30px;
+    height: 30px;
+}
+
+.custom-image {
+    object-fit: cover;
+    width:100%;
+    height:100%;
+}
+
+.fa {
+    padding: 15px 30px 15px 0px;
+    color:  var(--bs-body-color);
 }
 
 .fa:hover {
     color: #8FA5D5;
-}
-
-
-ul, li {
-    padding: 0px;
-    background-color: #eed2e600 !important;
 }
