--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,78 +1,70 @@
 <!-- Footer -->
-<footer class="page-footer font-small teal pt-4">
+<footer class="text-center text-lg-start custom-footer">
+  <!-- Footer  -->
+  <section>
+    <!-- INICIO CONTENEDOR -->
+    <div class="container text-center text-md-start mt-5 pt-5">
 
-    <div class="container-fluid text-center text-md-left">
-  
-      <!-- FILA DE LOS 2 BLOQUES DE CONTENIDO-->
-      <div class="row">
-  
-        <!-- COLUMNA IZQUIERDA -->
-        <div class="col-md-6 mt-md-0 mt-3">
-          <h5 class="text-uppercase font-weight-bold">Adopta Una Mascota</h5>
+      <!-- INICIO FILA GENERAL -->
+      <div class="row mt-3 justify-content-between">
 
-        <ul class="list-group list-group-small">
-          <li class="list-group-item border-0">Home</li>
-          <li class="list-group-item border-0">Quienes somos</li>
-          <li class="list-group-item border-0">Contacta con nosotros</li>
-          <li class="list-group-item border-0">Blog</li>
-          <li class="list-group-item border-0">Dar en adopción</li>
-        </ul>
-
-
-        </div>
-  
-        <!-- COLUMNA DERECHA -->
-        <div class="col-md-6 mb-md-0 mb-3">
-          <h5 class="text-uppercase font-weight-bold">Desarrollo y responsabilidad social</h5>
-          <p>Por un desarrollo sostenible y un cuidado responsable ¡Únete al club!
-            <br>
-            Entidad fundada por <strong>Belinda Cuesta, Fran García,
-            Antonio Guijarro, Paula Muerte y Raquel Álvarez</strong>
+        <!-- Inicio presentación empresa -->
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4 px-4">
+          <h6 class="text-uppercase fw-bold mb-4">DESARROLLO Y RSC</h6>
+          <p>
+            Por un desarrollo sostenible y un cuidado responsable, ¡únete al club!
+            Entidad fundada por <strong>Belinda Cuesta, Fran García, Antonio Guijarro, 
+            Paula Muerte y Raquel Álvarez</strong>
           </p>
+          <div>
+            <a class="fb-ic" href="https://es-es.facebook.com/" target="_blank"> <i class="fa fa-facebook"></i></a>
+            <a class="fb-ic" href="https://twitter.com/?lang=es/" target="_blank"> <i class="fa fa-twitter"></i></a>
+            <a class="fb-ic" href="https://www.instagram.com/" target="_blank"> <i class="fa fa-instagram"></i></a>
+            <a class="fb-ic" href="https://es.linkedin.com/" target="_blank"> <i class="fa fa-linkedin"></i></a>
+            <a class="fb-ic" href="https://www.pinterest.es/" target="_blank"> <i class="fa fa-pinterest"></i></a>
+          </div>
         </div>
+        <!-- Fin presentación empresa -->
+
+        <!-- Inicio links -->
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4 links">
+          <div class="row justify-content-between">
+            <h6 class="text-uppercase fw-bold mb-4">
+              NUESTRA WEB
+            </h6>
+            <div class="col-md-6 col-lg-6 col-xl-6">
+              <p><a href="../landingPage/home" class="text-reset">Home</a></p>
+              <p><a href="../landingPage/aboutUs" class="text-reset">Sobre nosotros</a></p>
+              <p><a href="../landingPage/contactUs" class="text-reset">Contacto</a></p>
+              <p><a href="../landingPage/blog" class="text-reset">Blog</a></p>
+            </div> 
+            <div class="col-md-6 col-lg-6 col-xl-6">
+              <p><a href="../landingPage/formularioAdopcion" class="text-reset">Dar en adopción</a></p>
+              <p><a href="../landingPage/politica-privacidad" class="text-reset">Política de privacidad</a></p>
+              <p><a href="../landingPage/politica-cookies" class="text-reset">Política de cookies</a></p>
+              <p><a href="../landingPage/faqs" class="text-reset">FAQs</a></p>
+            </div> 
+          </div>
+        </div>
+        <!-- Fin links -->
+
+        <!-- Inicio logo -->
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4 d-none d-md-block">
+          <div class="contenedor-imagen">
+            <img class="custom-image" src="/assets/logo-footer.png">
+          </div>
+        </div>
+        <!-- Fin logo -->
+        
       </div>
     </div>
-    
+  </section>
+  <!-- Section: Links  -->
 
-    <div class="container-fluid">
-    <!-- FILA DE LOGOTIPO-->
-    <div class="row" id="iconosYlogo">
-
-      <div class="col-md-6 logo">
-        <img src="/assets/logo-png.png">
-      </div> 
-
-          <!-- FILA DE ICONOS-->
-        <div class="col-md-6 py-5 icons">
-            <a class="fb-ic" href="https://es-es.facebook.com/" target="_blank">
-                <i class="fa fa-facebook fa-2x"></i>
-            </a>
-            <a class="tw-ic" href="https://twitter.com/?lang=es" target="_blank">
-                <i class="fa fa-twitter fa-2x"></i>
-            </a>
-            <a class="li-ic" href="https://es.linkedin.com/" target="_blank">
-                <i class="fa fa-linkedin fa-2x"></i>
-            </a>
-            <a class="ins-ic" href="https://www.instagram.com/" target="_blank">
-                <i class="fa fa-instagram fa-2x"></i>
-            </a>
-            <a class="pin-ic" href="https://www.pinterest.es/" target="_blank">
-              <i class="fa fa-pinterest fa-2x"> </i>
-            </a>
-        </div>
-      </div>
-
+  <!-- Copyright -->
+  <div class="text-center p-4 custom-copyright">
+    © 2023 Copyright: TeamOne
   </div>
-  
-    <!-- FILA DEL COPYRIGHT-->
-    <div class="footer-copyright text-center py-3">© 2023 Copyright:
-      <a> TeamOne</a>
-    </div>
-
-  
-  </footer>
-  <!-- Footer -->
-
-
-
- 
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
