--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -19,10 +19,10 @@
         <a class="nav-link" routerLink="home">Home</a>
       </li>
       <li class="nav-item" >
-        <a class="nav-link" routerLink="aboutUs" >Quienes somos</a>
+        <a class="nav-link" routerLink="aboutUs" >Sobre nosotros</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="contactUs">Contacta con nosotros</a>
+        <a class="nav-link" routerLink="contactUs">Contacto</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" >Blog</a>
