politica cookies estructura

--- a/src/app/Components/cookies/cookies.component.html
+++ b/src/app/Components/cookies/cookies.component.html
@@ -6,7 +6,7 @@
       <p>Esta web usa cookies para asegurarse de que tienes la mejor experiencia</p>
       <div class="buttons">
         <button class="item" (click)="accept()" >Acepto</button>
-        <a href="#" class="item" >Leer más</a>
+        <a href="../landing/politica-cookies" class="item" >Leer más</a>
       </div>
     </div>
   </div> 
