--- a/src/app/Pages/privacy-policy/privacy-policy.component.html
+++ b/src/app/Pages/privacy-policy/privacy-policy.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-xl-5">
+<div class="container mt-5 px-5">
     <div class="row">
 
         <h1>Política de privacidad</h1>
