--- a/src/app/Pages/cookies-policy/cookies-policy.component.html
+++ b/src/app/Pages/cookies-policy/cookies-policy.component.html
@@ -8,28 +8,36 @@
         </p>
         <p></p>
         <h2>¿Qué son las cookies?</h2>
+        <p>
+            Las cookies son pequeños archivos de texto que se almacenan en tu ordenador o dispositivo móvil cuando visitas 
+            nuestra web. Estas cookies nos permiten reconocerte como usuario y personalizar tu experiencia en nuestra web.
+        </p>
+        <p></p>
+        <h2>¿Qué tipos de cookies utilizamos?</h2>
+        <p>Hacemos usos de diferentes tipo de cookies para ofrecerte la mejor experiencia posible al usar nuestra web:
+            <li><strong>Cookies esenciales. </strong> Necesarias para el funcionamiento de la web y que te eprmiten navegar por ella y utilizar sus funcionalidades.</li>
+            <li><strong>Cookies de rendimiento. </strong> Permiten analizar cómo los usuarios utilizan nuestra web, para mejroar su funcionamiento y la experiencia de usuario.</li>
+            <li><strong>Cookies de funcionalidad. </strong> Permiten recordar tus preferencias de navegación y personalizar el contenido que ves en nuestra web.</li>
+            <li><strong>Cookies de terceros. </strong> Como Google Analytics, para analizar el tráfico de nuestra web y mejorar el contenido que te mostramos. Estas cookies están sujetas a las políticas de privacidad de los proveedores correspondientes.</li>
+        </p>
+        <p></p>
+        <h2>¿Cómo puedes gestionar las cookies?</h2>
+        <p>
+            Puedes gestionar las cookies en cualquier momento desde tu navegador, configurándolo para aceptar o rechazarlas todas.
+            Ten en cuenta que si decides rechazar las cookies, es posible que algunas funcionalidades de nuestra web no estén disponibles para ti.
+            <br>
+            <br>
+            También puedes configurar tu navegador para borrar las cookies que se hayan almacenado en tu ordenador o dispositivo móvil.
+        </p>
+
+        <p></p>
+
+        <h2>¿Cómo puedes contactarnos?</h2>
+        <p>
+            Si tienes cualquier pregunta o sugerencia sobre nuestra política de cookies, no dudes en <b><a href="../landingPage/contactUs">ponerte en contacto con nosotros</a></b> a través de nuestro formulario de contacto en la web.
+        </p>
+        <p></p>
+        <p>Esta política de cookies puede ser actualizada en cualquier momento, por lo que te recomendamos que la revises con regularidad.</p>
     </div>
 </div>
 
-
-
-¿Qué son las cookies?
-Las cookies son pequeños archivos de texto que se almacenan en tu ordenador o dispositivo móvil cuando visitas nuestra web. Estas cookies nos permiten reconocerte como usuario y personalizar tu experiencia en nuestra web.
-
-Tipos de cookies que utilizamos:
-
-Cookies esenciales: son necesarias para el funcionamiento de la web y te permiten navegar por ella y utilizar sus funcionalidades, como acceder a áreas seguras o realizar compras en línea.
-Cookies de rendimiento: nos permiten analizar cómo los usuarios utilizan nuestra web, para mejorar su funcionamiento y la experiencia de usuario.
-Cookies de funcionalidad: nos permiten recordar tus preferencias de navegación y personalizar el contenido que ves en nuestra web.
-Cookies de publicidad: nos permiten mostrar publicidad personalizada en función de tus intereses y preferencias de navegación.
-También utilizamos cookies de terceros, como Google Analytics y Facebook Ads, para analizar el tráfico de nuestra web y mejorar la publicidad que te mostramos. Estas cookies están sujetas a las políticas de privacidad de los proveedores correspondientes.
-
-¿Cómo puedes gestionar las cookies?
-Puedes gestionar las cookies en cualquier momento desde tu navegador, configurándolo para aceptar o rechazar todas las cookies, o para recibir una notificación cada vez que se envía una cookie. Ten en cuenta que si decides rechazar las cookies, es posible que algunas funcionalidades de nuestra web no estén disponibles para ti.
-
-También puedes configurar tu navegador para borrar las cookies que se hayan almacenado en tu ordenador o dispositivo móvil.
-
-¿Cómo puedes contactarnos?
-Si tienes cualquier pregunta o sugerencia sobre nuestra política de cookies, no dudes en ponerte en contacto con nosotros a través de nuestro formulario de contacto en la web.
-
-Esta política de cookies puede ser actualizada en cualquier momento, por lo que te recomendamos que la revises con regularidad.
