--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -9,7 +9,7 @@
 <!-- HEADER-->
 
 <nav class="navbar navbar-expand-sm navbar-light fixed-top">
-  <a class="navbar-brand">
+  <a class="navbar-brand" href="../landingPage/home">
     <img src="/assets/logo-png.png" class="d-inline-block align-top" alt="">
   </a>
 
