--- a/src/app/Pages/faqs/faqs.component.html
+++ b/src/app/Pages/faqs/faqs.component.html
@@ -1,40 +1,130 @@
 <div class="container mt-5 px-5">
-    <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Accordion Item #1
-                </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+    <div class="row">
+        <h1>Preguntas frecuentes</h1>
+        <p></p>
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        #1 &nbsp; ¿Cómo puedo ver las fichas de los perros y gatos disponibles para adopción?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Para ello, tienes que descargar la aplicación (puedes hacerlo <b><a href="https://play.google.com/store/games" target="_blank">aquí</a></b>) y registrarte. Una vez logueada, encontrarás una lista de mascotas disponibles con sus fotos y descripciones. Además, podrás aplicar varios filtros que te ayudarán a encontrar una mascota según tus preferencias.
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Accordion Item #2
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        #2 &nbsp; ¿Cómo puedo saber si un perro o un gato ya ha sido adoptado?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Por evitar confusiones o peticiones múltiples, en cuanto se inicie el trámite para una adopción, el animal deja de aparecer en la aplicación. También puede ser útil contactar con la organización detrás de la aplicación para obtener información actualizada. En caso de que la adopción no se finalice, la mascota volerá a mostrarse en la app.
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Accordion Item #3
-                </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
                 </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading4">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseTwo">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading5">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapseTwo">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading6">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapseTwo">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading7">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapseTwo">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading8">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapseTwo">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading9">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapseTwo">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading10">
+                    <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapseTwo">
+                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                    </button>
+                </h2>
+                <div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 </div>
+
