--- a/src/app/Pages/faqs/faqs.component.css
+++ b/src/app/Pages/faqs/faqs.component.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-    font-family: "poppins-extraLight";
+    font-family: "poppins-bold";
 }
 
 p {
@@ -31,4 +31,10 @@ p {
 a {
     color: #D18DBC;
     text-decoration: none;
+}
+
+.custom:not(.collapsed) {
+    color: #292C35 !important;
+    background-color: #f7e7f2;
+    box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
